added css to resume page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .container {
+            width: 80%;
+            max-width: 800px;
+            margin: 20px auto;
+            background-color: #fff;
+            padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            border-bottom: 2px solid #ddd;
+            padding-bottom: 5px;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to my resume</h1>
+    <div class="container">
+        <header>
+            <h1>Your Name</h1>
+            <p>Email: your.email@example.com | Phone: +1234567890</p>
+            <p>Address: Your Address, City, Country</p>
+        </header>
+        <div class="section">
+            <h2>Profile</h2>
+            <p>Brief introduction or career objective.</p>
+        </div>
+        <div class="section">
+            <h2>Education</h2>
+            <h3>Degree Title</h3>
+            <p>Institution Name, Year of Graduation</p>
+            <p>Relevant coursework, honors, or achievements.</p>
+        </div>
+        <div class="section">
+            <h2>Experience</h2>
+            <h3>Job Title</h3>
+            <p>Company Name, Start Date - End Date</p>
+            <ul>
+                <li>Responsibility or achievement 1.</li>
+                <li>Responsibility or achievement 2.</li>
+                <li>Responsibility or achievement 3.</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Skills</h2>
+            <ul>
+                <li>Skill 1</li>
+                <li>Skill 2</li>
+                <li>Skill 3</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Projects</h2>
+            <h3>Project Title</h3>
+            <p>Brief description of the project and your role in it.</p>
+        </div>
+        <div class="section">
+            <h2>Certifications</h2>
+            <ul>
+                <li>Certification Title, Issuing Organization, Year</li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>References</h2>
+            <p>Available upon request.</p>
+        </div>
+    </div>
 </body>
 </html>
