--- a/404.html
+++ b/404.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>403</title>
+    <title>404</title>
 </head>
 <body>
-    <h1>403: Access forbidden!</h1>
+    <h1>404: Page not found!</h1>
     <p>Made possible with CloudFront</p>
 </body>
 </html>
