wrote fetch api for updating visitor count

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <p>Address: Your Address, City, Country</p>
         </header>
         <div class="section">
+            <h2>Visitor count</h2>
+            <p>The total number of visitors on this page is:</p>
+            <p id="visitor-count"></p>
+        </div>
+        <div class="section">
             <h2>Profile</h2>
             <p>Brief introduction or career objective.</p>
         </div>
