made changes to page style and added blog page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="visitorCounter.js" defer></script>
 </head>
 <body>
+    <div class="wrapper-bar">
+        <p id="website-name">tristantech.org</p>
+        <a href="index.html" class="link">CV</a>
+        <a href="blog.html" class="link">Blog</a>
+    </div>
     <div class="container">
         <header>
             <h1>Your Name</h1>
@@ -63,5 +68,6 @@
             <p>Available upon request.</p>
         </div>
     </div>
+    <div class="wrapper-bar"></div>
 </body>
 </html>
