changed website layout and wrote blog post

--- a/blog.html
+++ b/blog.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - TristanTech.org</title>
+    <title>Blog - tristantech.org</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="wrapper-bar">
-        <p id="website-name">tristantech.org</p>
+        <p id="website-name">TristanTech.org</p>
         <a href="index.html" class="link">CV</a>
         <a href="blog.html" class="link">Blog</a>
     </div>
@@ -30,7 +30,6 @@
                 <li><a href="post1.html">Post Title 1</a></li>
                 <li><a href="post2.html">Post Title 2</a></li>
                 <li><a href="post3.html">Post Title 3</a></li>
-                <!-- Add more posts as needed -->
             </ul>
         </div>
     </div>
