--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cloud Resume Challenge</title>
+    <title>CV - TristanTech.org</title>
     <link rel="stylesheet" href="styles.css">
     <script src="visitorCounter.js" defer></script>
 </head>
 <body>
     <div class="wrapper-bar">
-        <p id="website-name">tristantech.org</p>
+        <p id="website-name">TristanTech.org</p>
         <a href="index.html" class="link">CV</a>
         <a href="blog.html" class="link">Blog</a>
     </div>
